<resources>
    <string name="app_name">MIPT_3</string>

    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_Dot">.</string>
    <string name="btn_Equal">=</string>
    <string name="btn_Minus">-</string>
    <string name="btn_Plus">+</string>
    <string name="btn_Multiply">*</string>
    <string name="btn_Devision">/</string>
    <string name="btn_Precentage">%</string>
    <string name="btn_OneDevByX">1/x</string>
    <string name="btn_Sqrt">√</string>
    <string name="btn_Delete">←</string>
    <string name="btn_DeleteAll">C</string>
    <string name="btn_CE">CE</string>
    <string name="btn_ChangeSymbol">±</string>
    <string name="btn_MC">MC</string>
    <string name="btn_MR">MR</string>
    <string name="btn_MS">MS</string>
    <string name="btn_MPlus">M+</string>
    <string name="btn_MMinus">M-</string>

</resources>