<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn2"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="8dp"
        android:onClick="btn2Click"
        android:text="@string/btn_2"
        app:layout_constraintEnd_toStartOf="@+id/btn3"
        app:layout_constraintTop_toBottomOf="@+id/btn5" />

    <Button
        android:id="@+id/btnEqual"
        android:layout_width="65dp"
        android:layout_height="140dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:onClick="btnCalculate"
        android:text="@string/btn_Equal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1DevByX"
        app:layout_constraintVertical_bias="0.021" />

    <Button
        android:id="@+id/btnMC"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="10dp"
        android:text="@string/btn_MC"
        app:layout_constraintEnd_toStartOf="@+id/btnMR"
        app:layout_constraintTop_toBottomOf="@+id/txtViewMainWindow" />

    <Button
        android:id="@+id/btnMS"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="11dp"
        android:text="@string/btn_MS"
        app:layout_constraintBottom_toTopOf="@+id/btnDeleteAll"
        app:layout_constraintEnd_toStartOf="@+id/btnMPlus"
        app:layout_constraintTop_toBottomOf="@+id/txtViewMainWindow"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="8dp"
        android:onClick="btn6Click"
        android:text="@string/btn_6"
        app:layout_constraintEnd_toStartOf="@+id/btnMulti"
        app:layout_constraintTop_toBottomOf="@+id/btn9" />

    <Button
        android:id="@+id/btnMR"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="11dp"
        android:text="@string/btn_MR"
        app:layout_constraintBottom_toTopOf="@+id/btnCE"
        app:layout_constraintEnd_toStartOf="@+id/btnMS"
        app:layout_constraintTop_toBottomOf="@+id/txtViewMainWindow" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="10dp"
        android:onClick="btn1Click"
        android:text="@string/btn_1"
        app:layout_constraintEnd_toStartOf="@+id/btn2"
        app:layout_constraintTop_toBottomOf="@+id/btn4" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:onClick="btn7Click"
        android:text="@string/btn_7"
        app:layout_constraintEnd_toStartOf="@+id/btn8"
        app:layout_constraintTop_toBottomOf="@+id/btnDelete" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="10dp"
        android:text="@string/btn_Delete"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/btnCE"
        app:layout_constraintTop_toBottomOf="@+id/btnMC" />

    <TextView
        android:id="@+id/txtViewMainWindow"
        android:layout_width="362dp"
        android:layout_height="180dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:gravity="bottom"
        android:singleLine="false"
        android:text="0"
        android:textAlignment="gravity"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textDirection="firstStrongRtl"
        android:textSize="42sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="8dp"
        android:onClick="btn5Click"
        android:text="@string/btn_5"
        app:layout_constraintEnd_toStartOf="@+id/btn6"
        app:layout_constraintTop_toBottomOf="@+id/btn8" />

    <Button
        android:id="@+id/btn1DevByX"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="26dp"
        android:text="@string/btn_OneDevByX"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPrecentage" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="16dp"
        android:onClick="btnPlusClick"
        android:text="@string/btn_Plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnEqual"
        app:layout_constraintTop_toBottomOf="@+id/btnMinus"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnDeleteAll"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btn_DeleteAll"
        app:layout_constraintEnd_toStartOf="@+id/btnChangeSymbol"
        app:layout_constraintTop_toBottomOf="@+id/btnMS" />

    <Button
        android:id="@+id/btnMinus"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="10dp"
        android:onClick="btnMinusClick"
        android:text="@string/btn_Minus"
        app:layout_constraintEnd_toStartOf="@+id/btnEqual"
        app:layout_constraintTop_toBottomOf="@+id/btnMulti" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:onClick="btn8Click"
        android:text="@string/btn_8"
        app:layout_constraintEnd_toStartOf="@+id/btn9"
        app:layout_constraintTop_toBottomOf="@+id/btnCE" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="8dp"
        android:onClick="btn3Click"
        android:text="@string/btn_3"
        app:layout_constraintEnd_toStartOf="@+id/btnMinus"
        app:layout_constraintTop_toBottomOf="@+id/btn6" />

    <Button
        android:id="@+id/btnSqrt"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="26dp"
        android:text="@string/btn_Sqrt"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMMinus" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="140dp"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:onClick="btn0Click"
        android:text="@string/btn_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnDot"
        app:layout_constraintTop_toBottomOf="@+id/btn2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="10dp"
        android:onClick="btn4Click"
        android:text="@string/btn_4"
        app:layout_constraintEnd_toStartOf="@+id/btn5"
        app:layout_constraintTop_toBottomOf="@+id/btn7" />

    <Button
        android:id="@+id/btnChangeSymbol"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="10dp"
        android:text="@string/btn_ChangeSymbol"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/btnSqrt"
        app:layout_constraintTop_toBottomOf="@+id/btnMPlus" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:onClick="btn9Click"
        android:text="@string/btn_9"
        app:layout_constraintEnd_toStartOf="@+id/btnDEvi"
        app:layout_constraintTop_toBottomOf="@+id/btnDeleteAll" />

    <Button
        android:id="@+id/btnCE"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btn_CE"
        app:layout_constraintEnd_toStartOf="@+id/btnDeleteAll"
        app:layout_constraintTop_toBottomOf="@+id/btnMR" />

    <Button
        android:id="@+id/btnMMinus"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="11dp"
        android:text="@string/btn_MMinus"
        app:layout_constraintBottom_toTopOf="@+id/btnSqrt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewMainWindow"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnDEvi"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:onClick="btnDeviClick"
        android:text="@string/btn_Devision"
        app:layout_constraintEnd_toStartOf="@+id/btnPrecentage"
        app:layout_constraintTop_toBottomOf="@+id/btnChangeSymbol" />

    <Button
        android:id="@+id/btnMulti"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="10dp"
        android:onClick="btnMultClick"
        android:text="@string/btn_Multiply"
        app:layout_constraintEnd_toStartOf="@+id/btn1DevByX"
        app:layout_constraintTop_toBottomOf="@+id/btnDEvi" />

    <Button
        android:id="@+id/btnPrecentage"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="26dp"
        android:text="@string/btn_Precentage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSqrt" />

    <Button
        android:id="@+id/btnMPlus"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="11dp"
        android:text="@string/btn_MPlus"
        app:layout_constraintBottom_toTopOf="@+id/btnChangeSymbol"
        app:layout_constraintEnd_toStartOf="@+id/btnMMinus"
        app:layout_constraintTop_toBottomOf="@+id/txtViewMainWindow" />

    <Button
        android:id="@+id/btnDot"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_Dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnPlus"
        app:layout_constraintTop_toBottomOf="@+id/btn3"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>